basic structure of js in pseudo code started to write questions objects with nested answer arrays"

--- a/index.html
+++ b/index.html
@@ -5,28 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>API Quiz-JavaScript</title>
-    <link rel="stylesheet" href="./Develop/style.css">
+    <link rel="stylesheet" href="./Assets/css/style.css">
 </head>
 <body>
 <a href="#highscores">View High Scores</a>
 <header>
-    <h1>Welcome to the API quiz!</h1>
-    <h2>Let's test your knowledge!</h2>
+   
 </header>
 <form>
-   
-    <h3>Question:</h3>
-    <p>What is API?</p>
-   
-    <div><input type="checkbox">Art Pressed Inputs</div>
-    <div><input type="checkbox">Art Pressed Inputs</div> 
-    <div><input type="checkbox">Art Pressed Inputs</div>
-    <div><input type="checkbox">Art Pressed Inputs</div>
+    <h1 class="intro">Welcome to the API quiz!</h1>
+    <h2 class="intro">Let's test your knowledge!</h2>
+   <h3 id="question">Question:</h3>
+  
+    <div><input class="answer1" type="button">Art Pressed Inputs</div>
+    <div><input class="answer1" type="button">Art Pressed Inputs</div> 
+    <div><input class="answer1" type="button">Art Pressed Inputs</div>
+    <div><input class="answer1" type="button">Art Pressed Inputs</div> 
 
-    
-    <button class="back">BACK</button>
-    <button class="next">NEXT</button>
+    <button id="btn" class="start">START</button>
+    <!-- <button class="back">BACK</button>
+    <button class="next">NEXT</button> -->
 </form>
-<script src="./Develop/main.js"></script>   
+<script src="./Assets/js/main.js"></script>   
 </body>
 </html>
