--- a/index.html
+++ b/index.html
@@ -6,26 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>API Quiz-JavaScript</title>
     <link rel="stylesheet" href="./Assets/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
 </head>
 <body>
 <a href="#highscores">View High Scores</a>
 <header>
    
 </header>
-<form>
-    <h1 class="intro">Welcome to the API quiz!</h1>
-    <h2 class="intro">Let's test your knowledge!</h2>
-   <h3 id="question">Question:</h3>
-  
-    <div><input class="answer1" type="button">Art Pressed Inputs</div>
-    <div><input class="answer1" type="button">Art Pressed Inputs</div> 
-    <div><input class="answer1" type="button">Art Pressed Inputs</div>
-    <div><input class="answer1" type="button">Art Pressed Inputs</div> 
+<main id="form">
+    <!-- Intro slide for quiz start button is displayed at the bottom  -->
+    <div id="begin" >
+        <h1 class="intro">Welcome to the JavaScript quiz!</h1>
+        <h2 class="intro">Let's test your knowledge!</h2>
+        <button id="strtBtn" class="intro">START</button>
+    </div>
 
-    <button id="btn" class="start">START</button>
+    <div id="questions" class="hide">
+        <h3 id="question">Question:</h3>
+            <div><button id="answer1" type="button">this is where my question will be inputted with JavaScript</button></div>
+            <div><button id="answer2" type="button">this is where my question will be inputted with JavaScript</button></div> 
+            <div><button id="answer3" type="button">this is where my question will be inputted with JavaScript</button></div>
+            <div><button id="answer4" type="button">this is where my question will be inputted with JavaScript</button></div> 
+    </div>    
+    
     <!-- <button class="back">BACK</button>
     <button class="next">NEXT</button> -->
-</form>
-<script src="./Assets/js/main.js"></script>   
+    </main>
+<script src="./Assets/js/main.js">
+//    $('#startBtn').on('click', function(){
+//     $('.intro').hide();
+//    });
+
+</script>   
 </body>
 </html>
