--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
 </head>
 <body>
 <a href="#highscores">View High Scores</a>
+
 <header>
-   
+    <div id="time-container" class="hide">
+        <h3 class="card-time">Total time remaining: <br> (00: <span id="time">00</span>)</h3>
+    </div>
 </header>
 <main id="form">
+
     <!-- Intro slide for quiz start button is displayed at the bottom  -->
     <div id="begin" >
         <h1 class="intro">Welcome to the JavaScript quiz!</h1>
@@ -29,6 +33,9 @@
             <div><button id="answer3" type="button">this is where my question will be inputted with JavaScript</button></div>
             <div><button id="answer4" type="button">this is where my question will be inputted with JavaScript</button></div> 
     </div>    
+    <div>
+        <p id="rightOrWrong"> </p>
+    </div>
     
     <!-- <button class="back">BACK</button>
     <button class="next">NEXT</button> -->
