working on timer after clicking start button

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <header>
     <div id="time-container" class="hide">
-        <h3 class="card-time">Total time remaining: <br> (00: <span id="time">00</span>)</h3>
+        <h3 class="card-time">Total time remaining: <br> (00: <span id="timer">00</span>)</h3>
     </div>
 </header>
 <main id="form">
